<resources>
    <string name="app_name">EasyScreening</string>
    <string name="TextViewTitulo">App Triagem</string>
    <string name="buttontriagem">Triagem</string>
    <string name="buttonpacientes">Pacientes</string>
    <string name="textViewPagTriagem">Triagens</string>
    <string name="buttonnovatriagem">Nova Triagem</string>
    <string name="buttonconsultartriagem">Consultar Triagem</string>
    <string name="textViewPacientes">Pacientes</string>
    <string name="buttonestatisticas">Estatisticas</string>
    <string name="textViewNovaTriagem">Nova Triagem</string>
    <string name="textViewNumeroUtente">Nº Utente</string>
    <string name="textViewSintomas">Sintomas Apresentados</string>
    <string name="checkBoxDificuldadeRespiratoria">Dificuldade Respiratória</string>
    <string name="checkBoxTossePersistente">Tosse Persistente</string>
    <string name="checkBoxFebre">Febres Acima dos 38ºC</string>
    <string name="checkBoxDoresMusculares">Dores Musculares</string>
    <string name="checkBoxDoresCabeça">Dores de Cabeça</string>
    <string name="editTextNumeroUtente">Insira o Numero do Utente</string>
    <string name="editTextIdade">Idade</string>
    <string name="textViewNome">Nome</string>
    <string name="textViewIdade">Data de Nascimento</string>
    <string name="textViewDadosPessoais">Dados Pessoais</string>
    <string name="checkBoxTremores">Tremores</string>
    <string name="checkBoxArrepios">Arrepios</string>
    <string name="checkBoxGarganta">Inflamação da Garganta</string>
    <string name="checkBoxOlfato">Perda de Olfato ou Paladar</string>
    <string name="buttonSubmeterTriagem">Submeter Triagem</string>
    <string name="textViewDados">Dados dos Pacientes</string>
    <string name="erroNomeUtente">Erro: É necessário inserir o Nome do Utente</string>
    <string name="erroNumeroUtente">Erro: O Numero de Utente deve ser contituido por 9 digitos</string>
    <string name="erroIntroduzirIdade">Erro: Introduza a Idade</string>
    <string name="erroIdadeInvalida">Erro: Data de Nascimento Inválida</string>
    <string name="buttonVer">Lista de Pacientes</string>
    <string name="buttonUpdate">Editar Paciente</string>
    <string name="textViewIDPaciente">Editar Informações de um Paciente</string>
    <string name="editTextInserirID">Insira o ID do Paciente a editar</string>
    <string name="ID">ID</string>
    <string name="textViewInfoEditar">Indique o ID do paciente que pretende editar e preencha os campos</string>
    <string name="textViewEliminarPaciente">Eliminar Pacientes</string>
    <string name="textViewEliminarInfo">Indique o ID do paciente que pretende eliminar</string>
    <string name="textViewData">Data da Triagem</string>
    <string name="buttonconsultar">Consultar Triagem</string>
    <string name="editTextSintomas">Introduza os Sintomas</string>
    <string name="buttonAdicionarSintoma">Adicionar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
