<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroudgradient"
    tools:context=".ActivityNovaTriagem">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActivityNovaTriagem">


        <Button
            android:id="@+id/buttonSubmeterTriagem"

            android:layout_width="230dp"
            android:layout_height="45dp"
            android:layout_marginTop="414dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btnskin"
            android:hint="@string/buttontriagem"
            android:onClick="buttonSubmeterTriagem"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/buttonSubmeterTriagem"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editTextNomeUtente"
            android:layout_width="234dp"
            android:layout_height="35dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="17dp"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:hint="Insira o Nome do Utente"
            android:inputType="textPersonName"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDadosPessoais" />

        <EditText
            android:id="@+id/editTextIdade"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:hint="@string/editTextIdade"
            android:inputType="number"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumeroUtente" />

        <EditText
            android:id="@+id/editTextNumeroUtente"
            android:layout_width="207dp"
            android:layout_height="35dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:hint="@string/textViewNumeroUtente"
            android:inputType="number"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNomeUtente" />

        <EditText
            android:id="@+id/editTextSintomas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/editTextSintomas"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSintomas" />

        <TextView
            android:id="@+id/textViewNumeroUtente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="18dp"
            android:text="@string/textViewNumeroUtente"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewNome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNome" />

        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="118dp"
            android:text="@string/textViewNome"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewIdade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="18dp"
            android:text="@string/textViewIdade"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewNumeroUtente"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumeroUtente" />

        <TextView
            android:id="@+id/textViewNovaTriagem"
            android:layout_width="237dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/textViewNovaTriagem"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#050505"
            android:textSize="36sp"
            app:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toTopOf="@+id/textViewDadosPessoais"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDadosPessoais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/textViewDadosPessoais"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNovaTriagem" />

        <TextView
            android:id="@+id/textViewSintomas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/textViewSintomas"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextIdade" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
